--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,11 @@
 <resources>
     <string name="app_name">Calculator App</string>
-    <string name="add_numbers">Add Numbers</string>
+    <string name="add_numbers">Add</string>
+    <string name="subtract_numbers">Subtract</string>
+    <string name="multiply_numbers">Multiply</string>
+    <string name="divide_numbers">Divide</string>
     <string name="result">Result</string>
     <string name="enter_first_number">Enter First Number</string>
     <string name="enter_second_number">Enter Second Number</string>
+    <string name="clear">Clear</string>
 </resources>
