--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,11 @@
     <string name="enter_first_number">Enter First Number</string>
     <string name="enter_second_number">Enter Second Number</string>
     <string name="clear">Clear</string>
+
+    <string-array name="operations">
+        <item>@string/add_numbers</item>
+        <item>@string/subtract_numbers</item>
+        <item>@string/multiply_numbers</item>
+        <item>@string/divide_numbers</item>
+    </string-array>
 </resources>
