feat: added value for the spinner prompt to strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="enter_first_number">Enter First Number</string>
     <string name="enter_second_number">Enter Second Number</string>
     <string name="clear">Clear</string>
+    <string name="operation_spinner_prompt">Select an Operation</string>
 
     <string-array name="operations">
         <item>@string/add_numbers</item>
